[package]
name = "z71200-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"
console-subscriber = "0.4.1"
lazy_static = "1.5.0"
anyhow = "1.0"
tokio = { version = "1.45.0", features = ["full"] }

# Layout
parley = "0.4.0"
taffy = "0.8.1"

# Rendering
winit = "0.30.10"
skia-safe = { version = "0.84.0", features = ["vulkan"] }
vulkano = "0.35.1"
ash = "0.38.0"
smallvec = "1.15.0"

# Assembler
strum = { version = "0.27", features = ["derive"] }
meval = "0.2.0"

# CLI
clap = { version = "4.5.38", features = ["derive"] }

# SHM
memmap2 = "0.9.5"
libc = "0.2.172"
serde = "1.0.219"
serde_json = "1.0.140"
